@@ -8,7 +8,6 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.beans.factory.annotation.Value;
@@ -27,7 +26,7 @@ public class FilesAccess {
                     .filter(file -> !Files.isDirectory(file))
                     .map(file -> file.getFileName().toString())
                     .filter(fileName -> fileName.matches("^[a-zA-Z0-9-_]{1,64}$"))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 
